force-app/main/default/objects/Dubai_Dreamin_Timeline__mdt/Dubai_Dreamin_Timeline__mdt.object-meta.xml
<CustomObject>
    <label>Dubai Dreamin Timeline</label>
    <pluralLabel>Dubai Dreamin Timelines</pluralLabel>
</CustomObject>