force-app/main/default/objects/Dubai_Dreamin_Timeline__mdt/fields/Branding_Material_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Branding_Material_Delivery_Date__c</fullName>
    <label>Opening Branding Material Delivery Date</label>
    <type>Date</type>
</CustomField>