force-app/main/default/objects/Dubai_Dreamin_Timeline__mdt/fields/Speaker_Material_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Material_Submission_Date__c</fullName>
    <label>Speaker Material Submission Deadline</label>
    <type>Date</type>
</CustomField>